# SimulatedEcosystem

./: .gitignore  Animal.cpp  Animal.h  CMakeLists.txt  Cell.cpp  Cell.h  Grass.cpp  Grass.h  NaturalElement.cpp  NaturalElement.h  README.md  SaltMinerals.cpp  SaltMinerals.h  Sheep.h  Simulation.cpp  Simulation.h  SimulationView.cpp  SimulationView.h  Universe.cpp  Universe.h  Wolf.cpp  Wolf.h  main.cpp
software_design/: Ecosystem_Project_Design.mdj
src/Animal/: Animal.cpp  Animal.h  Gender.cpp  Gender.h  Sheep.cpp  Sheep.h  Wolf.cpp  Wolf.h
src/Entity/: Entity.cpp  Entity.h
src/Entity/Animal/: Animal.cpp  Animal.h  Sheep.h
src/Entity/NaturalElement/: Grass.cpp  Grass.h  NaturalElement.h
src/NaturalElement/: Grass.cpp  Grass.h  NaturalElement.cpp  NaturalElement.h  SaltMinerals.cpp  SaltMinerals.h
src/Save/: UniverseExporter.cpp  UniverseExporter.h  UniverseImporter.cpp  UniverseImporter.h
src/Simulation/: Center.cpp  Center.h  Simulation.cpp  Simulation.h  SimulationView.cpp  SimulationView.h
src/Universe/: Cell.cpp  Cell.h  Universe.cpp  Universe.h
